Correctif overflow user-list

--- a/src/app/board/board/board.component.scss
+++ b/src/app/board/board/board.component.scss
@@ -185,6 +185,7 @@
   border-radius: 8px;
   padding: 12px;
   background-color: #fafafa;
+  overflow-y: auto;
 
   .neutral-zone-title {
     margin: 0 0 10px;
